--- a/components/Tables/TableBody.module.scss
+++ b/components/Tables/TableBody.module.scss
@@ -59,3 +59,34 @@
         }
     }
 }
+.notice {
+    th, td {
+        font-size: 12px;
+        p {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            svg {
+                margin-left:8px;
+            }
+        }
+        &:nth-child(1) {
+            width: 5%;
+        }
+        &:nth-child(2) {
+            width: 5%;
+        }
+        &:nth-child(3) {
+            width: auto;
+        }
+        &:nth-child(4) {
+            width: 10%;
+        }
+        &:nth-child(5) {
+            width: 10%;
+        }
+        &:nth-child(6) {
+            width: 15%;
+        }
+    }
+}
