--- a/components/Tables/TableHeader.module.scss
+++ b/components/Tables/TableHeader.module.scss
@@ -69,41 +69,35 @@
 }
 .productGd {
     tr {
-        &:nth-child(1) {
-            th {
-           
-                &:nth-child(1) {
-                    width: 5%;
-                    min-width: 50px;
-                }
-                &:nth-child(2) {
-                    width: 15%;
-                    min-width: 100px;
-                }
-                &:nth-child(3) {
-                    width: 10%;
-                    min-width: 100px;
-                }
-                &:nth-child(4) {
-                    width: 30%;
-                    min-width: 80px;
-                }
-                &:nth-child(5) {
-                    width: 10%;
-                    min-width: 100px;
-                }
-                &:nth-child(6) {
-                    width: 10%;
-                    min-width: 50px;
-                }
-                &:nth-child(7) {
-                    width: 10%;
-                    min-width: 100px;
-                }
-                &:nth-child(8) {
-                    width: 5%;
-                    min-width: 50px;
-                }
+        th {
+            &:nth-child(1) {
+                width: 5%;
+                min-width: 30px;
+            }
+            &:nth-child(2) {
+                width: 5%;
+            }
+            &:nth-child(3) {
+                width: 30%;
+            }
+            &:nth-child(4) {
+                width: 10%;
+                min-width: 80px;
+            }
+            &:nth-child(5) {
+                width: 15%;
+                min-width: 100px;
+            }
+            &:nth-child(6) {
+                width: 10%;
+                min-width: 50px;
+            }
+            &:nth-child(7) {
+                width: 10%;
+                min-width: 100px;
+            }
+            &:nth-child(8) {
+                width: 10%;
             }
         }
     }
@@ -151,6 +145,48 @@
         }
     }
 }
+
+.billingProduct {
+    th {
+        &:nth-child(1) {
+                min-width: 30px;
+                width: 1%;
+            }
+            &:nth-child(2) {
+                width: 5%;
+            }
+            &:nth-child(3) {
+                width: 15%;
+            }
+            &:nth-child(4) {
+                width: 5%;
+            }
+            &:nth-child(5) {
+                width: 10%;
+            }
+            &:nth-child(6) {
+                width: 10%;
+            }
+            &:nth-child(7) {
+                width: 14%;
+            }
+            &:nth-child(8) {
+                width: 8%;
+            }
+            &:nth-child(9) {
+                width: 8%;
+            }
+            &:nth-child(10) {
+                width: 8%;
+            }
+            &:nth-child(11) {
+                width: 5%;
+            }
+            &:nth-child(12) {
+                width: 10%;
+            }
+        }
+    }
     
 .sortToggle {
     font-size: 11px;
