--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,7 +15,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 0,0,0;
+    --foreground-rgb: 0, 0, 0;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
@@ -35,7 +35,9 @@ body {
     padding: 0 15px;
     width: 100%;
   }
-  .mainContent {flex-grow: 1}
+  .mainContent {
+    flex-grow: 1;
+  }
 }
 @media (max-width: 1920px) {
   body {
@@ -46,7 +48,7 @@ body {
   }
 }
 
-a[class*="btn"] {
+a[class*='btn'] {
   text-align: center;
 }
 .page {
@@ -143,4 +145,40 @@ a[class*="btn"] {
   background-color: var(--color-pink);
 }
 
-// @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard-dynamic-subset.css");
+.react-select__control {
+  background-color: #fff;
+  width: 100px;
+  height: 30px;
+  padding-right: 15px;
+  border: none;
+  border-radius: 20px;
+  display: flex;
+  text-align: center;
+  cursor: pointer;
+}
+.react-select__single-value {
+  color: #ffffff; /* 텍스트 색상 지정 */
+  font-size: 14px;
+}
+.react-select__menu {
+  background-color: #ffffff;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+.react-select__option {
+  background-color: #fff; /* option 배경색 */
+  color: black; /* option 텍스트 색상 */
+}
+
+.react-select__option--is-selected {
+  background-color: #fff;
+  color: white; /* 클릭된 option 텍스트 색상 */
+}
+.react-select__option--is-focused {
+  color: black; /* hover 상태의 option 텍스트 색상 */
+}
+.react-select__placeholder {
+  color: white;
+}
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard-dynamic-subset.css');
